# healthy-meal-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
app/: __init__.py  schemas.py
app/agents/: graph.py  meal_agent.py  mock_agent.py
app/data/: cookrcp01_all.csv  foods_clean.csv  foods_samsam.csv
app/services/: __init__.py  condition_extractor.py  embedding_service.py  food_retriever.py  intent_router.py  llm_client.py  meal_composer.py  meal_judge.py  nutrition_calculator.py  nutrition_lookup.py  observability.py  supabase_client.py  validator.py
backend/: __init__.py  main.py  schemas.py
backend/routers/: chat.py  health.py  recipe_image.py
eval/: RESULT.md  dataset_extract.jsonl  dataset_intent.jsonl  dataset_workflow.jsonl  run_eval.py
frontend/: api_client.py  app.py  auth_view.py  chat_state.py  chat_view.py  composer.py  constants.py  sidebar.py  styles.py
frontend/components/: cards.py  sidebar.py
scripts/: adapt_samsam.py  ai_reviewer.py  apply_llm_classification.py  classify_korean_llm.py  curate_salads.py  embed_foods.py  fix_broken_nutrition.py  import_foods_to_supabase.py  reclassify_foods.py
tests/: test_chat_api.py  test_condition_extractor.py  test_extract.py  test_health.py  test_intent_router.py  test_llm_client.py  test_meal_agent.py  test_meal_composer.py  test_meal_quality.py  test_mock_agent.py  test_observability.py  test_retriever.py  test_validator.py
